client/src/assets/style/baseStyle.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
:root {
    --bg-color: rgb(232, 232, 255);
    --text-color: #000000;
    --p-text-color:#363636;
    --login-txt-color:black;
}
[data-theme='dark-yellow']{
    --bg-color: rgb(0, 0, 0);
    --text-color: #fff700;
    --p-text-color:#fbff7d;
    --login-txt-color:white;
}
[data-theme='dark-white']{
    --bg-color:rgb(0, 0, 0);
    --text-color: white;
    --p-text-color:whitesmoke;
    --login-txt-color:white;
}
*{
    box-sizing: border-box;
    
    font-family: 'Inter', ui-sans-serif, system-ui, sans-serif;
}
body{
    margin: 0px; padding: 0px;
    background-color: var(--bg-color);
    /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/m212M1nM/local_HOst.jpg'); */
    /* background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://i.postimg.cc/bNSNbS5G/kiara_Anime.jpg'); */
    background-image: linear-gradient(rgba(0,0,0,.8),rgba(0,0,0,.8)), url('https://res.cloudinary.com/dcve50avm/image/upload/v1765989942/loser_3221/sl36pdtthqxsemrwjxrp.jpg');
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    transition: background-color 0.3s,color 0.3s;
    overscroll-behavior: none;
    overflow: hidden;
}
#rootContainer,.middlerWhere{
    height: 100dvb; 
    width: 100vw;
    display: flex;
    align-items: flex-start;
    flex-direction: column;
    /* background: var(--mini-bg-color);
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px); */
    position: relative; 
    overflow:hidden;
    overscroll-behavior: none;
}
.middlerWhere{
    height: 100% !important;
    width: 100% !important;
    z-index: 9 !important;
}
.dropDown{
    top: 100%;
    left: -150%;
    padding: 10px;
    display: flex;
    align-items: center;
    transform: translateY(-15px);
    
    animation: dropDwn 1s forwards;

    ul{
        display: flex;
        left: 0px;
        flex-direction: column;
        gap: 5px;

        li{
            list-style: none;
            padding: 5px;
            border-bottom: 1px solid gray;
            display: flex;
            align-items: center;
            justify-content: center;
        }
    }
}
@keyframes dropDwn {
    from{transform: translateY(-15px);
        opacity: 0;
        visibility: hidden;
    }
    to{
        transform: translateY(2px);
        opacity: 1;
        visibility: visible !important;
    }
}
.Logotxt,.firstHalf{
    i,h2,p{
        animation: bgMove 6s linear infinite;
    }
    p{
        font-family: 'Courier New', Courier, monospace;
    }
    h2{
        animation-direction: alternate-reverse;
        font-family: 'Courier New', Courier, monospace;
    }
}
@keyframes bgMove {
    0%,100%{
        background-position: 200%,50%;
    }
    50%{background-position: 50%,0%;}
}
@media (max-width:1025px) {
    
    #badBtnToobad{
        display: none;
    }

    .menuDiv{
        width: 50px;
        .Logotxt{
            width: auto;
            h2{
                display: none;
            }
        }
        .menuContainer{
            .topU li{
                span{
                    display: none;
                }
            }
            .secul li ul{
                font-size: medium;
                
            }
            .secul>li>span{
                display: none;
            }
        }
    }
    
}
.menuDiv{
    ul{
        padding: 10px;
        transition: all .3s ease;
        li{
            transition: all .6s ease-out;
            display: flex;
            gap: 10px;
            align-items: center;
            flex-direction: row;
            padding: 5px;
            border-radius: 10px;
            cursor: pointer;
            /* &:hover{
                background-color: var(--p-text-color);
                color: var(--bg-color);
            } */
        
        }

        a{
            display: flex;
            align-items: center;
            flex-direction: row;
            gap: 10px;
            padding: 1px;
        }
        .secul{
            position: relative;
            ul{
                opacity: 1 !important;
                li:nth-child(2){
                    position: relative;
                    opacity: 1 !important;
                }
            }
        }
    }
    /* ul:hover li{
        opacity: .5;
    }
    ul:hover li:hover{
        opacity: .8;
    } */
}
/* @media (max-width:426px) {
    .routeContainer{
        width: 100vw !important;
    }
    .menuDiv{
        height: 50px;
        width: 100%;
        flex-direction: row !important;
        position: absolute;
        bottom: 5px;

        .menuContainer{
            height: 50px;
            width: 100vw;
            flex-direction: row;
            background-color: var(--bg-color);
            ul{
                width: 100%;
                flex-direction: row;
                border: 1px;
                align-items: center;
                justify-content: space-between;
                gap: 1px;
                font-size: 30px;
                position: absolute;
                bottom: 0px;

                li:nth-child(3){
                    display: none;
                }
            }
        }
        .Logotxt{
            display: none;
        }
        .secul{
            display: none;
        }
    }
} */

.underTaker{
    height: 100%; width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    padding: 5px;
    position: relative;
}
.my-scroll{
    overflow-x: hidden;
    overflow-y: scroll;
    scrollbar-width: none;
    -ms-overflow-style: none;
}
.my-scroll::-webkit-scrollbar{
    display: none;
}
.my-scroll-visible{
    scrollbar-width:auto;
    -ms-overflow-style: auto;
}
.my-scroll-visible::-webkit-scrollbar{
    all: unset;
    width: 8px;
    border-radius: 16px
}
/* ... */

